# ODConvert

./: .gitignore  README.md  pyproject.toml
ODConvert/: router.py
ODConvert/commands/: __init__.py  convert.py  inspect.py
ODConvert/converters/: yolo.py
ODConvert/core/: __init__.py  dataset.py
ODConvert/handlers/: __init__.py  base.py  coco.py  dataset.py
